[package]
name = "watchdog-rs"
version = "0.1.0"
authors = ["Saluki"]
edition = "2021"

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
clap = "2.33.3"
reqwest = "0.11"
chrono = "0.4"
