[package]
name = "watchdog-rs"
description = "Minimalist & multi-region network monitoring tool written in Rust"
license = "AGPL-3.0-or-later"
version = "0.3.0"
authors = ["Saluki"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Saluki/watchdog-rs"
repository = "https://github.com/Saluki/watchdog-rs"
keywords = ["network", "monitoring", "multi-region"]
categories = ["command-line-utilities"]
exclude = ["/data", "/grafana", "/release.sh", ".*"]
rust-version = "1.64"

[dependencies]

# Runtime
tokio = { version = "1.28.0", features = ["full"] }
axum = { version = "0.6" }
tower = { version = "0.4", features = ["util", "timeout"] }
tokio-util = "0.7"

# HTTP essentials
validator = { version = "0.16", features = ["derive"] }

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI & utilities
clap = "4.2"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
chrono = "0.4"
ansi_term = "0.12"
